before ModalFragment.java -> DialogFragment modification